# python-utils

./: .dj-config.toml  .gitignore  conftest.py  gunicorn.conf.py  pyproject.toml  render-build.sh  render.yaml
.github/: FUNDING.yml
project/: settings.py
tests/unicorn/components/strftime/: test_format_datetime.py
unicorn/components/: django_date_filter.py  strftime.py  string_format.py
unicorn/templates/unicorn/: django-date-filter.html  strftime.html  string-format.html
www/: views.py
www/templates/www/: index.html
www/templates/www/bases/: base.html
