[tool.poetry]
name = "python-utils.com"
version = "0.1.0"
description = "Utilities for Python"
authors = ["Adam Hill"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.1"
django-annoying = "^0.10.6"
python-dotenv = "^0.14.0"
gunicorn = "^20.0.4"
whitenoise = "^5.1.0"
django-compressor = "^2.4"
django-unicorn = "0.38.1"
django-cache-memoize = "^0.1.7"
django-redis = "^4.12.1"
httpx = "^0.14.2"
sentry-sdk = "^0.17.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
isort = "^5.1.1"
black = "^19.10b0"
mypy = "^0.782"
pytest = "^6.2.2"
pytest-django = "^4.1.0"
freezegun = "^1.1.0"
pytest-freezegun = "^0.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
default_section = "THIRDPARTY"
known_first_party = ["unicorn", "www", "project",]
known_django = "django"
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
lines_after_imports = 2
multi_line_output = 3
include_trailing_comma = true
skip_glob = "*/migrations/*.py"
profile = "black"

[tool.pytest.ini_options]
addopts = "--quiet --failed-first --reuse-db --nomigrations -p no:warnings"
testpaths = [
    "tests"
]
